Feat(eos_designs): Underlay OSPF authentication (#4169)

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/MLAG-OSPF-L3LEAF1B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/MLAG-OSPF-L3LEAF1B.yml
@@ -170,6 +170,14 @@ ethernet_interfaces:
   ip_address: 10.10.101.9/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha512
+    key: qO39Oo+xVTO7l/La1StOQcW1t7hpfAAH
+  - id: 2
+    hash_algorithm: sha512
+    key: pWGuZ4QaDATcfTOKCkm1p2Rq2A4O9j5j
 mlag_configuration:
   domain_id: MLAG_OSPF_L3LEAF1
   local_interface: Vlan4094
