--- a/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/configs/DC1-BL1A.cfg
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/configs/DC1-BL1A.cfg
@@ -52,7 +52,9 @@ interface Ethernet1
    no switchport
    ip address 172.31.255.41/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 /wCirdje6f59x/1Ev+Oe6xok2+5jD3M/
 !
 interface Ethernet2
    description P2P_LINK_TO_DC1-SPINE2_Ethernet6
@@ -61,7 +63,9 @@ interface Ethernet2
    no switchport
    ip address 172.31.255.43/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 1/hPOHp0a3PkQCWZMV0yGy6bP8mYwQ5y
 !
 interface Ethernet3
    description P2P_LINK_TO_DC1-SPINE3_Ethernet6
@@ -70,7 +74,9 @@ interface Ethernet3
    no switchport
    ip address 172.31.255.45/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 1/hPOHp0a3PkQCWZMV0yGy6bP8mYwQ5y
 !
 interface Ethernet4
    description P2P_LINK_TO_DC1-SPINE4_Ethernet6
@@ -79,7 +85,9 @@ interface Ethernet4
    no switchport
    ip address 172.31.255.47/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 QB0XEg/PJV6Y5HtvjDdiafrPx/g+JRKk
 !
 interface Ethernet5
    description MLAG_PEER_DC1-BL1B_Ethernet5
