--- a/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/configs/DC1-LEAF2B.cfg
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/configs/DC1-LEAF2B.cfg
@@ -69,7 +69,9 @@ interface Ethernet1
    no switchport
    ip address 172.31.255.17/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 /wCirdje6f59x/1Ev+Oe6xok2+5jD3M/
 !
 interface Ethernet2
    description P2P_LINK_TO_DC1-SPINE2_Ethernet3
@@ -78,7 +80,9 @@ interface Ethernet2
    no switchport
    ip address 172.31.255.19/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 1/hPOHp0a3PkQCWZMV0yGy6bP8mYwQ5y
 !
 interface Ethernet3
    description P2P_LINK_TO_DC1-SPINE3_Ethernet3
@@ -87,7 +91,9 @@ interface Ethernet3
    no switchport
    ip address 172.31.255.21/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 1/hPOHp0a3PkQCWZMV0yGy6bP8mYwQ5y
 !
 interface Ethernet4
    description P2P_LINK_TO_DC1-SPINE4_Ethernet3
@@ -96,7 +102,9 @@ interface Ethernet4
    no switchport
    ip address 172.31.255.23/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 QB0XEg/PJV6Y5HtvjDdiafrPx/g+JRKk
 !
 interface Ethernet5
    description MLAG_PEER_DC1-LEAF2A_Ethernet5
