--- a/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/structured_configs/DC1-LEAF2A.yml
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/structured_configs/DC1-LEAF2A.yml
@@ -259,6 +259,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.9/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: /wCirdje6f59x/1Ev+Oe6xok2+5jD3M/
 - name: Ethernet2
   peer: DC1-SPINE2
   peer_interface: Ethernet2
@@ -270,6 +275,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.11/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: 1/hPOHp0a3PkQCWZMV0yGy6bP8mYwQ5y
 - name: Ethernet3
   peer: DC1-SPINE3
   peer_interface: Ethernet2
@@ -281,6 +291,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.13/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: 1/hPOHp0a3PkQCWZMV0yGy6bP8mYwQ5y
 - name: Ethernet4
   peer: DC1-SPINE4
   peer_interface: Ethernet2
@@ -292,6 +307,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.15/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: QB0XEg/PJV6Y5HtvjDdiafrPx/g+JRKk
 - name: Ethernet7
   peer: DC1-L2LEAF1A
   peer_interface: Ethernet1
