--- a/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/structured_configs/DC1-SPINE1.yml
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/structured_configs/DC1-SPINE1.yml
@@ -139,6 +139,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.0/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: /wCirdje6f59x/1Ev+Oe6xok2+5jD3M/
 - name: Ethernet2
   peer: DC1-LEAF2A
   peer_interface: Ethernet1
@@ -150,6 +155,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.8/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: 1/hPOHp0a3PkQCWZMV0yGy6bP8mYwQ5y
 - name: Ethernet3
   peer: DC1-LEAF2B
   peer_interface: Ethernet1
@@ -161,6 +171,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.16/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: 1/hPOHp0a3PkQCWZMV0yGy6bP8mYwQ5y
 - name: Ethernet4
   peer: DC1-SVC3A
   peer_interface: Ethernet1
@@ -172,6 +187,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.24/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: QB0XEg/PJV6Y5HtvjDdiafrPx/g+JRKk
 - name: Ethernet5
   peer: DC1-SVC3B
   peer_interface: Ethernet1
@@ -183,6 +203,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.32/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: QB0XEg/PJV6Y5HtvjDdiafrPx/g+JRKk
 - name: Ethernet6
   peer: DC1-BL1A
   peer_interface: Ethernet1
@@ -194,6 +219,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.40/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: kguPGHyy/wCN0mKibi4dLRL4PmsrU4UP
 - name: Ethernet7
   peer: DC1-BL1B
   peer_interface: Ethernet1
@@ -205,6 +235,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.48/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: kguPGHyy/wCN0mKibi4dLRL4PmsrU4UP
 loopback_interfaces:
 - name: Loopback0
   description: EVPN_Overlay_Peering
