--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-isis.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-isis.cfg
@@ -121,7 +121,13 @@ router isis EVPN_UNDERLAY
    authentication key 0 password
    !
    address-family ipv4 unicast
-      maximum-paths 2
+      tunnel source-protocol bgp ipv4 labeled-unicast
+      fast-reroute ti-lfa mode node-protection level-2
+      fast-reroute ti-lfa srlg
+   !
+   address-family ipv6 unicast
+      bfd all-interfaces
+      fast-reroute ti-lfa srlg
    !
    segment-routing mpls
       shutdown
