--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis-new.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis-new.yml
@@ -52,8 +52,6 @@ router_isis:
       enabled: True
       rcf: lu_2_sr_pfx()
   address_family_ipv6:
-    maximum_paths: 4
-    bfd_all_interfaces: true
     fast_reroute_ti_lfa:
       mode: node-protection
       level: level-1
@@ -104,6 +102,10 @@ router_isis:
           key_type: 0
           key: password
           rfc_5310: true
+        - id: 3
+          algorithm: sha-1
+          key_type: 0
+          key: password3
     level_2:
       key_type: 0
       key: password
@@ -121,6 +123,10 @@ router_isis:
           key_type: 0
           key: password
           rfc_5310: true
+        - id: 3
+          algorithm: sha-1
+          key_type: 0
+          key: password2
 
 ### Ethernet Interfaces ###
 ethernet_interfaces:
