--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,5 +1,5 @@
 # Python version
-sonar.python.version=3.9, 3.10, 3.11, 3.12
+sonar.python.version=3.10, 3.11, 3.12
 # Exclude tests from source
 sonar.exclusions=python-avd/tests/**
 # Path to tests
