Added more tests for coverage.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/vlan-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/vlan-interfaces.cfg
@@ -246,9 +246,18 @@ interface Vlan341
    isis authentication mode sha key-id 1000 rx-disabled
 !
 interface Vlan342
+   description isis authentication sha
+   isis authentication mode sha key-id 1010 level-1
+   isis authentication mode sha key-id 1010 level-1 key-id 1010 level-2
+!
+interface Vlan343
    description isis authentication shared-secret
    isis authentication mode shared-secret profile profile1 algorithm sha-1 rx-disabled level-1
    isis authentication mode shared-secret profile profile1 algorithm md5 rx-disabled level-2
+!
+interface Vlan344
+   description isis authentication shared-secret
+   isis authentication mode shared-secret profile profile-both algorithm md5 rx-disabled 
 !
 interface Vlan501
    description SVI Description
