--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/vlan-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/vlan-interfaces.yml
@@ -467,7 +467,7 @@ vlan_interfaces:
     isis_authentication_key: "asfddja23452"
 
   - name: Vlan341
-    description: isis authentication sha
+    description: isis authentication sha1
     isis_authentication_mode: sha
     isis_authentication_mode_sha:
       both:
@@ -479,16 +479,37 @@ vlan_interfaces:
         key_id: 1010
 
   - name: Vlan342
-    description: isis authentication sha
+    description: isis authentication sha2
+    isis_authentication_mode: sha
+    isis_authentication_mode_sha:
+      both:
+        key_id: 1001
+        rx_disabled: false
+
+  - name: Vlan343
+    description: isis authentication sha3
     isis_authentication_mode: sha
     isis_authentication_mode_sha:
       level_1:
         key_id: 1010
+        rx_disabled: true
       level_2:
         key_id: 1010
+        rx_disabled: true
 
-  - name: Vlan343
-    description: isis authentication shared-secret
+  - name: Vlan344
+    description: isis authentication sha4
+    isis_authentication_mode: sha
+    isis_authentication_mode_sha:
+      level_1:
+        key_id: 1011
+        rx_disabled: false
+      level_2:
+        key_id: 1011
+        rx_disabled: false
+
+  - name: Vlan345
+    description: isis authentication shared-secret1
     isis_authentication_mode: shared-secret
     isis_authentication_mode_shared_secret:
       level_1:
@@ -500,8 +521,21 @@ vlan_interfaces:
         algorithm: md5
         rx_disabled: true
 
-  - name: Vlan344
-    description: isis authentication shared-secret
+  - name: Vlan346
+    description: isis authentication shared-secret1
+    isis_authentication_mode: shared-secret
+    isis_authentication_mode_shared_secret:
+      level_1:
+        profile: profile1
+        algorithm: sha-1
+        rx_disabled: false
+      level_2:
+        profile: profile1
+        algorithm: md5
+        rx_disabled: false
+
+  - name: Vlan347
+    description: isis authentication shared-secret2
     isis_authentication_mode: shared-secret
     isis_authentication_mode_shared_secret:
       both:
@@ -516,3 +550,12 @@ vlan_interfaces:
         profile: profile1
         algorithm: md5
         rx_disabled: true
+
+  - name: Vlan348
+    description: isis authentication shared-secret3
+    isis_authentication_mode: shared-secret
+    isis_authentication_mode_shared_secret:
+      both:
+        profile: profile-both
+        algorithm: sha-256
+        rx_disabled: false
