--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/host_vars/duplicate-vrfs-duplicate-svi-name-conflict.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/host_vars/duplicate-vrfs-duplicate-svi-name-conflict.yml
@@ -46,4 +46,4 @@ tenants:
 expected_error_message: >-
   Found duplicate objects with conflicting data while generating configuration for SVIs in VRF 'VRF1'.
   {'id': 100, 'name': 'VLAN100', 'tenant': 'TENANT1'} conflicts with {'id': 100, 'name':
-  'VLAN100_CONFLICTING_NAME', 'tenant': 'DUPLICATE_TENANT1'}."
+  'VLAN100_CONFLICTING_NAME', 'tenant': 'DUPLICATE_TENANT1'}.
