updated the j2 logic for ipv4/ipv6 field set

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/traffic-policies.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/traffic-policies.cfg
@@ -30,6 +30,8 @@ traffic-policies
    field-set ipv4 prefix DEMO-02
       172.16.0.0/12 224.0.0.0/8
    !
+   field-set ipv4 prefix DEMO-03
+   !
    field-set l4-port SERVICE-DEMO
       10,20,80,440-450
    !
