--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/traffic-policies-2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/traffic-policies-2.yml
@@ -2,9 +2,10 @@
 traffic_policies:
   field_sets:
     ipv6:
-      - name: IPv6-Demo
+      - name: IPv6-DEMO-1
         prefixes:
           - 11:22:33:44:55:66:77:88
+      - name: IPv6-DEMO-2
 port_channel_interfaces:
   - name: Port-Channel2
     type: routed
