--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/traffic-policies-2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/traffic-policies-2.cfg
@@ -16,8 +16,10 @@ interface Management1
    ip address 10.73.255.122/24
 !
 traffic-policies
-   field-set ipv6 prefix IPv6-Demo
+   field-set ipv6 prefix IPv6-DEMO-1
       11:22:33:44:55:66:77:88
+   !
+   field-set ipv6 prefix IPv6-DEMO-2
    !
 !
 end
