--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
@@ -104,6 +104,14 @@ qos profile test
       bandwidth percent 50
       no priority
 !
+snmp-server vrf MGMT local-interface Management1
+snmp-server local-interface Loopback0
+snmp-server vrf Tenant_A_APP_Zone local-interface Loopback12
+snmp-server view VW-WRITE iso included
+snmp-server community SNMP-COMMUNITY-1 ro onur
+snmp-server community SNMP-COMMUNITY-2 view VW-READ rw ipv6 SNMP-MGMT SNMP-MGMT
+snmp-server community SNMP-COMMUNITY-3 ro
+!
 hardware access-list mechanism tcam
 !
 hardware speed-group 1 serdes 10g
