--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/lldp.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/lldp.yml
@@ -21,8 +21,9 @@ ethernet_interfaces:
 
   - name: Ethernet2
     description: Switched port with no LLDP rx/tx
-    mode: access
-    vlans: 110
+    switchport:
+      mode: access
+      access_vlan: 110
     lldp:
       transmit: false
       receive: true
@@ -30,8 +31,9 @@ ethernet_interfaces:
   - name: Ethernet3
     type: switched
     description: No special LLDP settings
-    mode: access
-    vlans: 110
+    switchport:
+      mode: access
+      access_vlan: 110
 
   - name: Ethernet4
     description: test
