initial l3 inband ztp commit

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/INBAND_MGMT_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/INBAND_MGMT_TESTS.yml
@@ -1,6 +1,9 @@
 ---
 default_node_types:
   - match_hostnames:
+      - inband-mgmt-spine.*
+    node_type: spine
+  - match_hostnames:
       - inband-mgmt-parent.*
     node_type: l3leaf
   - match_hostnames:
@@ -8,11 +11,29 @@ default_node_types:
     node_type: l2leaf
 
 default_interfaces:
+  - types: [ spine ]
+    platforms: [ default ]
+    downlink_interfaces: [ Ethernet1-10 ]
   - types: [ l3leaf, l2leaf ]
     platforms: [ default ]
     uplink_interfaces: [ Ethernet1-10 ]
     mlag_interfaces: [ Ethernet11-20 ]
     downlink_interfaces: [ Ethernet21-30 ]
+
+cvp_instance_ips:
+  - apiserver.arista.io
+
+name_servers:
+  - 1.1.1.1
+  - 8.8.8.8
+
+spine:
+  defaults:
+    loopback_ipv4_pool: 10.0.254.0/24
+    bgp_as: 64999
+  nodes:
+    - name: inband-mgmt-spine1-ztp
+      id: 1
 
 l3leaf:
   defaults:
@@ -26,9 +47,15 @@ l3leaf:
   nodes:
     - name: inband-mgmt-parent
       id: 1
+      inband_ztp: true
+      uplink_switches: [inband-mgmt-spine1-ztp]
+      uplink_ipv4_pool: 172.16.255.0/24
     - name: inband-mgmt-parent-vrf
       inband_mgmt_vrf: INBANDMGMT
       id: 2
+      inband_ztp: true
+      uplink_switches: [inband-mgmt-spine1-ztp]
+      uplink_ipv4_pool: 172.16.255.0/24
   node_groups:
     - group: inband-mgmt-parents-dualstack
       mlag_peer_ipv4_pool: 100.64.0.0/24
