--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -322,6 +322,7 @@ all:
             uplink-native-vlan-child:
         INBAND_MGMT_TESTS:
           hosts:
+            inband-mgmt-spine1-ztp:
             inband-mgmt-parent:
             inband-mgmt-parent-vrf:
             inband-mgmt-subnet:
