--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent.cfg
@@ -1,4 +1,8 @@
 !
+daemon TerminAttr
+   exec /usr/bin/TerminAttr -cvaddr=apiserver.arista.io:443 -cvauth=token-secure,/tmp/cv-onboarding-token -cvvrf=MGMT -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
+   no shutdown
+!
 vlan internal order ascending range 1006 1199
 !
 transceiver qsfp default-mode 4x10G
@@ -6,6 +10,8 @@ transceiver qsfp default-mode 4x10G
 service routing protocols model multi-agent
 !
 hostname inband-mgmt-parent
+ip name-server vrf MGMT 1.1.1.1
+ip name-server vrf MGMT 8.8.8.8
 !
 no enable password
 no aaa root
@@ -56,6 +62,13 @@ interface Port-Channel101
    switchport mode trunk
    port-channel lacp fallback timeout 30
    port-channel lacp fallback individual
+!
+interface Ethernet1
+   description P2P_LINK_TO_INBAND-MGMT-SPINE1-ZTP_Ethernet1
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 172.16.255.1/31
 !
 interface Ethernet21
    description INBAND-MGMT-SUBNET_Ethernet1
@@ -165,6 +178,12 @@ router bgp 65000
    neighbor IPv4-UNDERLAY-PEERS peer group
    neighbor IPv4-UNDERLAY-PEERS send-community
    neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
+   neighbor 10.0.254.1 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.0.254.1 remote-as 64999
+   neighbor 10.0.254.1 description inband-mgmt-spine1-ztp
+   neighbor 172.16.255.0 peer group IPv4-UNDERLAY-PEERS
+   neighbor 172.16.255.0 remote-as 64999
+   neighbor 172.16.255.0 description inband-mgmt-spine1-ztp_Ethernet1
    redistribute attached-host
    redistribute connected route-map RM-CONN-2-BGP
    !
