--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/inband-mgmt-parent.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/inband-mgmt-parent.yml
@@ -33,6 +33,17 @@ router_bgp:
   - source_protocol: connected
     route_map: RM-CONN-2-BGP
   - source_protocol: attached-host
+  neighbors:
+  - ip_address: 172.16.255.0
+    peer_group: IPv4-UNDERLAY-PEERS
+    remote_as: '64999'
+    peer: inband-mgmt-spine1-ztp
+    description: inband-mgmt-spine1-ztp_Ethernet1
+  - ip_address: 10.0.254.1
+    peer_group: EVPN-OVERLAY-PEERS
+    peer: inband-mgmt-spine1-ztp
+    description: inband-mgmt-spine1-ztp
+    remote_as: '64999'
   address_family_evpn:
     peer_groups:
     - name: EVPN-OVERLAY-PEERS
@@ -54,6 +65,16 @@ router_bgp:
     - source_protocol: connected
 service_routing_protocols_model: multi-agent
 ip_routing: true
+daemon_terminattr:
+  cvaddrs:
+  - apiserver.arista.io:443
+  cvauth:
+    method: token-secure
+    token_file: /tmp/cv-onboarding-token
+  cvvrf: MGMT
+  smashexcludes: ale,flexCounter,hardware,kni,pulse,strata
+  ingestexclude: /Sysdb/cell/1/agent,/Sysdb/cell/2/agent
+  disable_aaa: false
 vlan_internal_order:
   allocation: ascending
   range:
@@ -65,6 +86,11 @@ config_end: true
 enable_password:
   disabled: true
 transceiver_qsfp_default_mode_4x10: true
+ip_name_servers:
+- ip_address: 1.1.1.1
+  vrf: MGMT
+- ip_address: 8.8.8.8
+  vrf: MGMT
 vrfs:
 - name: MGMT
   ip_routing: false
@@ -76,6 +102,15 @@ management_api_http:
   - name: MGMT
   enable_https: true
 ethernet_interfaces:
+- name: Ethernet1
+  peer: inband-mgmt-spine1-ztp
+  peer_interface: Ethernet1
+  peer_type: spine
+  description: P2P_LINK_TO_INBAND-MGMT-SPINE1-ZTP_Ethernet1
+  shutdown: false
+  mtu: 9214
+  type: routed
+  ip_address: 172.16.255.1/31
 - name: Ethernet21
   peer: inband-mgmt-subnet
   peer_interface: Ethernet1
