Updated doc template for ethernet-interfaces

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -98,6 +98,7 @@ interface Ethernet2
 interface Ethernet3
    description P2P_LINK_TO_DC1-SPINE2_Ethernet2
    mtu 1500
+   switchport mode trunk
    no switchport
    switchport trunk native vlan 5
    switchport vlan translation out 23 dot1q-tunnel 50
