--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -212,6 +212,7 @@ ethernet_interfaces:
     spanning_tree_guard: root
     tcp_mss_ceiling:
       ipv6_segment_size: 65
+    mode: trunk
     switchport:
       trunk:
         native_vlan: 5
