Feat(eos_designs): Use CP-Profile for WAN when DP-Profile is not configured

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -150,14 +150,14 @@ router path-selection
    tcp mss ceiling ipv4 ingress
    !
    path-group AWS id 105
-      ipsec profile CP-PROFILE
+      ipsec profile ONE-PROFILE-TO-CONTROL-THEM-ALL
       !
       local interface Ethernet2
       !
       peer dynamic
    !
    path-group INET id 101
-      ipsec profile CP-PROFILE
+      ipsec profile ONE-PROFILE-TO-CONTROL-THEM-ALL
       !
       local interface Ethernet3
          stun server-profile INET-cv-pathfinder-pathfinder1-Ethernet1 INET-cv-pathfinder-pathfinder2-Ethernet1
@@ -173,7 +173,7 @@ router path-selection
          ipv4 address 10.9.9.6
    !
    path-group Satellite id 104
-      ipsec profile CP-PROFILE
+      ipsec profile ONE-PROFILE-TO-CONTROL-THEM-ALL
       keepalive interval auto
       !
       local interface Ethernet1/49.3
@@ -260,10 +260,6 @@ ip security
       encryption aes256
       dh-group 24
    !
-   sa policy DP-SA-POLICY
-      esp encryption aes256gcm128
-      pfs dh-group 14
-   !
    sa policy CP-SA-POLICY
       esp encryption aes256gcm128
       pfs dh-group 14
@@ -280,14 +276,7 @@ ip security
       sa lifetime 8 hours
       pfs dh-group 24
    !
-   profile DP-PROFILE
-      sa-policy DP-SA-POLICY
-      connection start
-      shared-key 7 ABCDEF1234567890666
-      dpd 10 50 clear
-      mode transport
-   !
-   profile CP-PROFILE
+   profile ONE-PROFILE-TO-CONTROL-THEM-ALL
       ike-policy CP-IKE-POLICY
       sa-policy CP-SA-POLICY
       connection start
@@ -310,7 +299,7 @@ ip security
       dpd 10 60 clear
    !
    key controller
-      profile DP-PROFILE
+      profile ONE-PROFILE-TO-CONTROL-THEM-ALL
 !
 interface Dps1
    description DPS Interface
