--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
@@ -398,10 +398,6 @@ ip_security:
     encryption: aes256
     dh_group: 24
   sa_policies:
-  - name: DP-SA-POLICY
-    esp:
-      encryption: aes256gcm128
-    pfs_dh_group: 14
   - name: CP-SA-POLICY
     esp:
       encryption: aes256gcm128
@@ -421,16 +417,7 @@ ip_security:
       integrity: sha256
       encryption: aes256
   profiles:
-  - name: DP-PROFILE
-    sa_policy: DP-SA-POLICY
-    connection: start
-    shared_key: ABCDEF1234567890666
-    dpd:
-      interval: 10
-      time: 50
-      action: clear
-    mode: transport
-  - name: CP-PROFILE
+  - name: ONE-PROFILE-TO-CONTROL-THEM-ALL
     ike_policy: CP-IKE-POLICY
     sa_policy: CP-SA-POLICY
     connection: start
@@ -459,7 +446,7 @@ ip_security:
       action: clear
     connection: start
   key_controller:
-    profile: DP-PROFILE
+    profile: ONE-PROFILE-TO-CONTROL-THEM-ALL
 management_security:
   ssl_profiles:
   - name: profileA
@@ -572,7 +559,7 @@ router_path_selection:
     - name: Ethernet1/49.3
     dynamic_peers:
       enabled: true
-    ipsec_profile: CP-PROFILE
+    ipsec_profile: ONE-PROFILE-TO-CONTROL-THEM-ALL
     keepalive:
       auto: true
   - name: AWS
@@ -581,7 +568,7 @@ router_path_selection:
     - name: Ethernet2
     dynamic_peers:
       enabled: true
-    ipsec_profile: CP-PROFILE
+    ipsec_profile: ONE-PROFILE-TO-CONTROL-THEM-ALL
   - name: INET
     id: 101
     local_interfaces:
@@ -601,7 +588,7 @@ router_path_selection:
       name: cv-pathfinder-pathfinder2
       ipv4_addresses:
       - 10.9.9.6
-    ipsec_profile: CP-PROFILE
+    ipsec_profile: ONE-PROFILE-TO-CONTROL-THEM-ALL
   load_balance_policies:
   - name: LB-DEFAULT-AVT-POLICY-CONTROL-PLANE
     path_groups:
