--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/cv-pathfinder-edge1.yml
@@ -3,14 +3,16 @@
 # Make sure to set the cv_token var on the molecule command line like:
 # molecule converge -s eos_designs_unit_tests -- --limit cv-pathfinder-edge1 -e cv_token=$CV_TOKEN -v
 
-# serial_number: mockZscaler
-# cv_server: "www.cv-play.corp.arista.io"
-# zscaler_endpoints: null
-
 # Testing multiple pathinfders on one device
 wan_route_servers:
   - hostname: cv-pathfinder-pathfinder1
   - hostname: cv-pathfinder-pathfinder2
+
+# Testing having only control_plane ipsec profile.
+wan_ipsec_profiles:
+  control_plane:
+    profile_name: ONE-PROFILE-TO-CONTROL-THEM-ALL
+    shared_key: ABCDEF1234567890
 
 # Testing overriding internet exit acls using custom rules with substitution
 ipv4_acls:
