Added ntp settings to dhcp server options

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-ipv6-only-vrf.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-ipv6-only-vrf.cfg
@@ -13,6 +13,8 @@ hostname inband-mgmt-ipv6-only-vrf
 ip name-server vrf MGMT 1.1.1.1
 ip name-server vrf MGMT 8.8.8.8
 !
+ntp server 2.2.2.55 prefer
+!
 no enable password
 no aaa root
 !
