--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-ipv6-1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-ipv6-1.cfg
@@ -13,6 +13,8 @@ hostname inband-mgmt-parent-ipv6-1
 ip name-server vrf MGMT 1.1.1.1
 ip name-server vrf MGMT 8.8.8.8
 !
+ntp server 2.2.2.55 prefer
+!
 no spanning-tree vlan-id 4093-4094
 !
 no enable password
