--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-dualstack2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-dualstack2.cfg
@@ -14,6 +14,7 @@ ip name-server vrf MGMT 1.1.1.1
 ip name-server vrf MGMT 8.8.8.8
 !
 ntp server 2.2.2.55 prefer
+ntp server pool.ntp.org
 !
 no spanning-tree vlan-id 4093-4094
 !
