--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/inband-mgmt-parent-ipv6-2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/inband-mgmt-parent-ipv6-2.yml
@@ -95,6 +95,8 @@ ntp:
   - name: 2.2.2.55
     vrf: null
     preferred: true
+  - name: pool.ntp.org
+    vrf: null
 spanning_tree:
   no_spanning_tree_vlan: 4093-4094
 vlans:
