updated the j2 logic

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
@@ -240,21 +240,12 @@ interface Tunnel4
    tunnel source interface Ethernet42
    tunnel destination 1.1.1.1
 !
-interface Vlan1
-   description test ipv6_address_virtual
-   ipv6 enable
-!
 interface Vlan2
-   description test ipv6_address_virtual and ipv6_address_virtuals
+   description test ipv6_nd_prefixes
    ipv6 enable
    ipv6 address 1b11:3a00:22b0:5200::15/64
    ipv6 nd managed-config-flag
    ipv6 nd prefix 1b11:3a00:22b0:5200::/64 infinite infinite no-autoconfig
-!
-interface Vlan3
-   description test ipv6_address_virtual
-   ipv6 enable
-   ipv6 address 1b11:3a00:22b3:5200::15/64
 !
 interface Vlan42
    description SVI Description
