--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
@@ -488,11 +488,9 @@ router bgp 65101
       !
       address-family ipv4
          neighbor 10.2.3.4 activate
-         neighbor 10.2.3.4 route-map RM-10.2.3.4-SET-NEXT-HOP-OUT out
+         neighbor 10.2.3.4 prefix-list PL-TEST-IN-AF4 in
+         neighbor 10.2.3.4 prefix-list PL-TEST-OUT-AF4 out
          neighbor 10.2.3.5 activate
-         neighbor 10.2.3.5 route-map RM-10.2.3.5-SET-NEXT-HOP-IN in
-         network 10.0.0.0/8
-         network 100.64.0.0/10 route-map RM-10.2.3.4
 !
 router general
    vrf BLUE-C2
